/users router + id as unique user identifier + keep sensitive sata in auth info (only server) + update swagger
